hphp/hack/test/typecheck/call_in_static_shape.php.exp
File "call_in_static_shape.php", line 7, characters 49-54:
Expected constant expression for initializer (Parsing[1002])
File "call_in_static_shape.php", line 7, characters 49-52:
This call is not allowed because its capabilities are incompatible with the context (Typing[4390])
  File "call_in_static_shape.php", line 7, characters 36-55:
  From this declaration, the context of this function body provides the capability set {}
  File "call_in_static_shape.php", line 4, characters 26-26:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, SystemLocal, WriteProperty}
